# neru

./: .gitignore  .mypy.ini  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  manage.py  pyproject.toml  runtests.py  settings_local.py  settings_prod.py
app/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
app/management/commands/: countsleep.py  create_admin_user.py  create_local_user.py  local_addrecords.py
app/migrations/: 0001_initial.py  0002_timeofsleep_username.py  0003_auto_20181026_1336.py  0004_auto_20181029_1314.py  0005_timeofsleep_note.py
app/templates/app/: .editorconfig  _index.html  index.html  index.html.tpl  user.html.tpl  userview.html.tpl
app/templates/registration/: login.html
neru/: settings_local.py  settings_prod.py  urls.py  wsgi.py
proj/: _settings_common.py  settings_common.py  settings_local.py  settings_prod.py  urls.py
tests/: settings.py  test_settings.py  tests.py
