[tool.poetry]
name = "neru"
version = "0.1.0"
description = "Neru"
authors = ["10sr <8.slashes@gmail.com>"]
license = "Unlicense"
# packages = [
#     { include = "proj" },
#     { include = "app" },
# ]

[tool.poetry.dependencies]
python = ">= 3.6"
Django = "=2.1.4"

[tool.poetry.dev-dependencies]
mypy = "^0.641.0"
black = "^18.3-alpha.0"

[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # Project specific
  | app/migrations
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
